<resources>
    <string name="app_name">YouTube Start End Time</string>
    <string name="instructions">"Input a YouTube Link. EX:"\n"https://www.youtube.com/watch?v=wvenu6GTe5z"\n"or https://youtu.be/wvenu6GTe5z"\n"and specify the start and/or end time."\n"Press 'Clip File' to apply start and end time to video file in download folder</string>
    <string name="youtube_link">"Paste YouTube Link"</string>
    <string name="start_sec">"Start Sec"</string>
    <string name="start_min">"Start Min"</string>
    <string name="start_hour">"Start Hour"</string>
    <string name="end_sec">"End Sec"</string>
    <string name="end_min">"End Min"</string>
    <string name="end_hour">"End Hour"</string>
    <string name="get_link">"Get Link"</string>
    <string name="downloadVideo">"Download"</string>
    <string name="copy">"Copy"</string>
    <string name="share">"Share"</string>
    <string name="open">"Open"</string>
    <string name="paste">"Paste"</string>
    <string name="show_saved">"Show Saved Links"</string>
    <string name="storage">"Clip File"</string>
    <string name="update">"Update"</string>
    <string name="github">"Github"</string>
</resources>