<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="254dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:text="@string/instructions"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/start_hour"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/start_hour"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/start_min"
        app:layout_constraintEnd_toStartOf="@+id/start_min"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/end_hour"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/end_hour"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/end_min"
        app:layout_constraintEnd_toStartOf="@+id/start_min"
        app:layout_constraintTop_toBottomOf="@+id/start_min"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/start_sec"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="79dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/start_sec"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/start_min"
        app:layout_constraintStart_toEndOf="@+id/start_min"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/end_sec"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/end_sec"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/end_min"
        app:layout_constraintStart_toEndOf="@+id/start_min"
        app:layout_constraintTop_toBottomOf="@+id/start_min"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/start_min"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginTop="76dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/start_min"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/end_min"
        android:layout_width="91dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:autofillHints="number"
        android:ems="10"
        android:hint="@string/end_min"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/end_sec"
        app:layout_constraintStart_toEndOf="@+id/end_hour"
        app:layout_constraintTop_toBottomOf="@+id/start_min" />

    <Button
        android:id="@+id/get_link_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/get_link"
        app:layout_constraintEnd_toEndOf="@+id/end_min"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/end_min"
        app:layout_constraintTop_toBottomOf="@+id/end_min" />

    <EditText
        android:id="@+id/youtube_link"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/youtube_link"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/start_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.322" />

    <TextView
        android:id="@+id/result_link"
        android:layout_width="322dp"
        android:layout_height="44dp"
        android:layout_marginTop="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_link_btn" />

    <Button
        android:id="@+id/copy_btn"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/copy"
        app:layout_constraintEnd_toEndOf="@+id/result_link"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/get_link_btn"
        app:layout_constraintTop_toBottomOf="@+id/result_link" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="140dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="180dp"
        android:layout_marginRight="180dp"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="@+id/result_link"
        app:layout_constraintTop_toBottomOf="@+id/result_link" />

</androidx.constraintlayout.widget.ConstraintLayout>